# iot-project

./: .gitignore  MQTTwrapper.py  README.md  WeatherDatabase.py  app.py  broker.py  central_node_start.sh  central_receiver.py  deploy_central.sh  deploy_station.sh  ingest.py  live_sensor_simulation.py  main.py  measure_station_start.sh  pyproject.toml  sender.py  sensors.py  setup_pi.sh  station_sender.py  test_sensors.py  weather_data.db
measurement/: __init__.py  config.py  measure.py  measurement_system.py  models.py  sensors.py
static/: app.js
templates/: index.html
