[project]
name = "iot-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "adafruit-blinka>=8.69.0",
    "adafruit-circuitpython-busdevice>=5.2.15",
    "adafruit-circuitpython-connectionmanager>=3.1.6",
    "colorzero>=2.0",
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
    "gpiozero>=2.0.1",
    "paho-mqtt>=2.1.0",
    "pyftdi>=0.57.1",
    "pyserial>=3.5",
    "python-dotenv>=1.2.1",
    "pyusb>=1.3.1",
    "setuptools>=80.9.0",
    "sysv-ipc>=1.2.0",
    "typing-extensions>=4.15.0",
    "w1thermsensor>=2.3.0",
]
